ㄹfeat: 이미지 업로드 API 연동, DB에 파일명만 저장